--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: SM
+title: Shaoor Munir
 email: shaoormunir@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Academic profile for Shaoor Munir. Ph.D student at University of California, Davis
@@ -61,13 +61,13 @@ author:
   bio    : "Computer Science Ph.D. student at University of California, Davis"
   links:
     - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+      icon: "fab fa-fw fa-twitter-square fa-2x"
       url: "https://twitter.com/Shaoor_Munir"
     - label: "GitHub"
-      icon: "fab fa-fw fa-github"
+      icon: "fab fa-fw fa-github fa-2x"
       url: "https://github.com/shaoomunir"
     - label: "Google Scholar"
-      icon: "ai ai-google-scholar"
+      icon: "fab fa-fw ai ai-google-scholar-square ai-2x"
       url: "https://scholar.google.com.pk/citations?user=fLZNXJIAAAAJ&hl"
 footer:
   links:
