--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Shaoor Munir
+title: About Me
 email: shaoormunir@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Academic profile for Shaoor Munir. Ph.D student at University of California, Davis
@@ -56,7 +56,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "About Me"
+  name   : "Shaoor Munir"
   avatar : "/assets/images/bio-photo.png"
   bio    : "Computer Science Ph.D. student at University of California, Davis"
   links:
