--- a/_config.yml
+++ b/_config.yml
@@ -61,13 +61,13 @@ author:
   bio    : "Computer Science Ph.D. student at University of California, Davis"
   links:
     - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square fa-2x"
+      icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/Shaoor_Munir"
     - label: "GitHub"
-      icon: "fab fa-fw fa-github fa-2x"
+      icon: "fab fa-fw fa-github"
       url: "https://github.com/shaoomunir"
     - label: "Google Scholar"
-      icon: "fab fa-fw ai ai-google-scholar-square ai-2x"
+      icon: "fab fa-fw ai ai-google-scholar-square"
       url: "https://scholar.google.com.pk/citations?user=fLZNXJIAAAAJ&hl"
 footer:
   links:
