--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plugins:
 author:
   name   : "Shaoor Munir"
   avatar : "/assets/images/bio-photo.png"
-  bio    : "Computer Science Ph.D. student at University of California, Davis"
+  bio    : "Ph.D. student at University of California, Davis"
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
