--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,14 @@ author:
       icon: "fab fa-fw ai ai-google-scholar-square"
       url: "https://scholar.google.com.pk/citations?user=fLZNXJIAAAAJ&hl"
 
+
+
+collections:
+  publications:
+    output: true
+    permalink: /:collection/:path/
+
+
 defaults:
   # _posts
   - scope:
@@ -86,6 +94,14 @@ defaults:
   - scope:
       path: "_pages"
       type: pages
+    values:
+      layout: single
+      author_profile: true
+  
+  #publications
+  - scope:
+      path: ""
+      type: posts
     values:
       layout: single
       author_profile: true
