--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ defaults:
   # _publications
   - scope:
       path: ""
-      type: posts
+      type: publications
     values:
       layout: single
       author_profile: true
