--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 main:
-  - title: "Educations and Experience"
+  - title: "Education and Experience"
     url: /about/
   - title: "Publications"
     url: /publications/
