--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ paginate_path: /page:num/
 
 include:
   - _pages
+  - _publications
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
