--- a/_config.yml
+++ b/_config.yml
@@ -23,17 +23,17 @@ minimal_mistakes_skin: default
 search: false
 
 # Build settings
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
+# paginate: 5 # amount of posts to show
+# paginate_path: /page:num/
 # timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
-  - _publications
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -72,7 +72,7 @@ author:
       url: "https://scholar.google.com.pk/citations?user=fLZNXJIAAAAJ&hl"
 
 
-
+# Collections
 collections:
   publications:
     output: true
@@ -107,15 +107,15 @@ defaults:
       layout: single
       author_profile: true
 
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
+# category_archive:
+#   type: liquid
+#   path: /categories/
+# tag_archive:
+#   type: liquid
+#   path: /tags/
   
-head_scripts:
-  - "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"
+# head_scripts:
+#   - "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"
 
 atom_feed:
   hide: true
