--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Academic profile for Shaoor Munir. Ph.D student at University of California, Davis
 twitter_username: Shaoor_Munir
 github_username: shaoormunir
-minimal_mistakes_skin: default
-search: false
+minimal_mistakes_skin: contrast
+search: true
 
 # Build settings
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
