Fix github link

--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
       url: "https://twitter.com/Shaoor_Munir"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/shaoomunir"
+      url: "https://github.com/shaoormunir"
     - label: "Google Scholar"
       icon: "fab fa-fw ai ai-google-scholar-square"
       url: "https://scholar.google.com.pk/citations?user=fLZNXJIAAAAJ&hl"
