--- a/_config.yml
+++ b/_config.yml
@@ -57,10 +57,13 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Shaoor Munir"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Ph.D. student at University of California, Davis"
+  name: "Shaoor Munir"
+  avatar: "/assets/images/bio-photo.jpg"
+  bio: "Ph.D. student at University of California, Davis"
   links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:contact@shaoormunir.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/Shaoor_Munir"
@@ -71,13 +74,11 @@ author:
       icon: "fab fa-fw ai ai-google-scholar-square"
       url: "https://scholar.google.com.pk/citations?user=fLZNXJIAAAAJ&hl"
 
-
 # Collections
 collections:
   publications:
     output: true
     permalink: /:collection/:path/
-
 
 defaults:
   # _posts
@@ -98,7 +99,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-  
+
   # _publications
   - scope:
       path: ""
@@ -113,7 +114,7 @@ defaults:
 # tag_archive:
 #   type: liquid
 #   path: /tags/
-  
+
 # head_scripts:
 #   - "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"
 
