--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,9 @@ author:
     - label: "Google Scholar"
       icon: "fab fa-fw ai ai-google-scholar-square"
       url: "https://scholar.google.com.pk/citations?user=fLZNXJIAAAAJ&hl"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/shaoormunir/"
 
 # Collections
 collections:
