--- a/_config.yml
+++ b/_config.yml
@@ -62,19 +62,19 @@ author:
   bio: "Ph.D. student at University of California, Davis"
   links:
     - label: "Email"
-      icon: "fas fa-fw fa-envelope-circle"
+      icon: "fas fa-fw fa-envelope-square"
       url: "mailto:contact@shaoormunir.com"
     - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-circle"
+      icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/Shaoor_Munir"
     - label: "GitHub"
-      icon: "fab fa-fw fa-github-circle"
+      icon: "fab fa-fw fa-github-square"
       url: "https://github.com/shaoormunir"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-circle"
+      icon: "fab fa-fw fa-linkedin-square"
       url: "https://www.linkedin.com/in/shaoormunir/"
     - label: "Google Scholar"
-      icon: "fab fa-fw ai ai-google-scholar-circle"
+      icon: "fab fa-fw ai ai-google-scholar-square"
       url: "https://scholar.google.com.pk/citations?user=fLZNXJIAAAAJ&hl"
 
 # Collections
