--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ author:
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:contact@shaoormunir.com"
     - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+      icon: "fab fa-fw fa-x-twitter-square"
       url: "https://twitter.com/Shaoor_Munir"
     - label: "GitHub"
       icon: "fab fa-fw fa-github-square"
