added social icons

--- a/_config.yml
+++ b/_config.yml
@@ -62,19 +62,19 @@ author:
   bio: "Ph.D. student at University of California, Davis"
   links:
     - label: "Email"
-      icon: "fab fa-fw fa-at"
+      icon: "fab fa-fw fa-at social-icon"
       url: "mailto:contact@shaoormunir.com"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-in"
+      icon: "fab fa-fw fa-linkedin-in social-icon"
       url: "https://www.linkedin.com/in/shaoormunir/"
     - label: "Twitter"
-      icon: "fab fa-fw fa-x-twitter"
+      icon: "fab fa-fw fa-x-twitter social-icon"
       url: "https://twitter.com/Shaoor_Munir"
     - label: "GitHub"
-      icon: "fab fa-fw fa-github"
+      icon: "fab fa-fw fa-github social-icon"
       url: "https://github.com/shaoormunir"
     - label: "Google Scholar"
-      icon: "fab fa-fw fa-google-scholar"
+      icon: "fab fa-fw fa-google-scholar social-icon"
       url: "https://scholar.google.com.pk/citations?user=fLZNXJIAAAAJ&hl"
 
 # Collections
