--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Academic profile for Shaoor Munir. Ph.D student at University of California, Davis
 twitter_username: Shaoor_Munir
 github_username: shaoormunir
-minimal_mistakes_skin: air
+minimal_mistakes_skin: dirt
 search: false
 
 # Build settings
