custom google tag

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,9 @@ permalink: /:categories/:title/
 include:
   - _pages
 
+analytics:
+  provider: custom
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
