remove analytics provider

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ permalink: /:categories/:title/
 include:
   - _pages
 
-analytics:
-  provider: custom
+# analytics:
+#   provider: custom
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
